fixed header being too big. Added copyright

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -144,7 +144,7 @@ hr.small {
   padding: 100px 0 50px;
   color: white;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .intro-header .site-heading,
   .intro-header .post-heading,
   .intro-header .page-heading {
@@ -169,7 +169,7 @@ hr.small {
   font-weight: 300;
   margin: 10px 0 0;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .intro-header .site-heading h1,
   .intro-header .page-heading h1 {
     font-size: 80px;
@@ -198,7 +198,7 @@ hr.small {
 .intro-header .post-heading .meta a {
   color: white;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .intro-header .post-heading h1 {
     font-size: 55px;
   }
